--- a/design/scss/_custom.scss
+++ b/design/scss/_custom.scss
@@ -1,34 +1,32 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap");
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 body {
-    background-color: #F3F4F9;
-    font-family: 'Kanit', sans-serif;
+    background-color: #f3f4f9;
+    font-family: "Kanit", sans-serif;
     padding-bottom: 50px;
-    
 }
 nav {
-    .navbar-brand{
+    .navbar-brand {
         margin-right: 30px;
         .bb {
             font-size: 32px;
             font-weight: 700;
-            color:#000000;
+            color: #000000;
         }
-        .soft{
+        .soft {
             font-size: 32px;
             font-weight: 700;
-            color:#FF5656;
+            color: #ff5656;
         }
     }
-    ul.navbar-nav{
-      
-        li.nav-item{
+    ul.navbar-nav {
+        li.nav-item {
             margin-right: 10px;
-            .nav-link{
+            .nav-link {
                 font-size: 14px;
             }
         }
@@ -41,10 +39,10 @@ nav {
     border: none;
     padding: 10px;
     margin-bottom: 20px;
-    p{
+    p {
         font-size: 14px;
     }
-    span{
+    span {
         font-size: 14px;
     }
     .more {
@@ -77,7 +75,7 @@ nav {
     &.repair {
         height: auto;
         width: 100%;
-        .text-repair{
+        .text-repair {
             font-size: 36px;
             color: $yellow;
         }
@@ -92,33 +90,33 @@ nav {
             margin-bottom: 10px;
         }
         .text-stock-repair {
-            color:$red;
+            color: $red;
             display: inline-block;
             margin-left: 8px;
         }
     }
- 
+
     &.product {
         .text-product-almost {
             font-size: 36px;
             color: $yellow;
         }
-        .product-stock{
+        .product-stock {
             border-left: 4px solid $yellow;
             padding-left: 10px;
             display: inline-block;
             margin-bottom: 10px;
         }
-        .text-product-stock{
-            color:$yellow;
+        .text-product-stock {
+            color: $yellow;
             display: inline-block;
-            margin-left: 8px;
+            margin: 8px;
         }
         .text-caim {
             font-size: 36px;
             color: $blue;
         }
-        .product-caim{
+        .product-caim {
             border-left: 4px solid $blue;
             padding-left: 10px;
             display: inline-block;
@@ -127,10 +125,10 @@ nav {
         .text-product-caim {
             color: $blue;
             display: inline-block;
-            margin:8px;
+            margin: 8px;
         }
     }
-    &.repair-list{
+    &.repair-list {
         .title-repair-list {
             border-left: 4px solid $green;
             padding-left: 10px;
@@ -140,22 +138,47 @@ nav {
         }
         .table-repair-list {
             font-size: 12px;
-            .repair-time{
+            overflow-x: auto;
+            text-align: center;
+            td {
+                overflow: visible;
+            }
+            td.time {
+                width: 100px;
+            }
+            td.name {
+                width: 150px;
+            }
+            td.model {
+                width: 150px;
+            }
+            td.detail {
+                width: 150px;
+            }
+            td.status {
+                width: 120px;
+            }
+            td.pricr {
+                width: 100px;
+            }
+          
+          
+          
+            .repair-time {
                 color: $green;
             }
             .repair-status {
-                color:$yellow;
-        
+                color: $yellow;
             }
-            .repair-appraise{
+            .repair-appraise {
                 color: $green;
             }
         }
     }
-    &.history-management{
-        height:auto;
-        width:100%; 
-        .title-history-list{
+    &.history-management {
+        height: auto;
+        width: 100%;
+        .title-history-list {
             border-left: 4px solid $blue;
             padding-left: 10px;
             display: inline-block;
@@ -165,18 +188,44 @@ nav {
         .table-history-list {
             font-size: 12px;
             overflow-x: auto;
-          
-            td{
-                border-collapse: collapse;
-            }
-            }
-            .management-time{
-                color: $blue;
-            }
-            .management-stock {
-                color:$blue;
-        
-            }
-           
+        }
+        .management-time {
+            color: $blue;
+        }
+        .management-stock {
+            color: $blue;
         }
     }
+}
+
+@media only screen and (max-device-width: 375px) {
+    .username {
+        //   display: none;
+        z-index: 9999999;
+    }
+    .table-repair-list {
+        width: 100%;
+        overflow-x: auto;
+    }
+    .table-repair-list td {
+        width: 100px;
+    }
+    .table-repair-list p {
+        font-size: 12px;
+    }
+    .table-repair-list td.fix-left {
+        position: sticky;
+        left: 0;
+        background-color: #fff;
+    }
+    .table-history-list {
+        width: 100%;
+        overflow-x: auto;
+    }
+    .table-history-list td {
+        width: 100px;
+    }
+    .table-history-list p {
+        font-size: 12px;
+    }
+}
